--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.pcss">
-    <script src="./js/App.js" defer></script>
+    <script src="./js/App.js" type="module" defer></script>
     
     <title>HaveToDo</title>
 </head>
